{
    "name": "SectorControls",
    "maps": [
        {
            "name": "Touch",
            "id": "5ea44e5e-3e53-4ff9-adf9-6def65334d1e",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "af89bed2-b080-4265-a7a4-bb1993b6c263",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "89ed5fed-8419-49f4-a1b3-c047eeaa7c10",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af3f2336-fb0f-413a-8b78-48831e909d8f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09b5617a-30d2-47e6-b90a-6cdde097d928",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}